I just fixed the input fields for the light and dark mode, they where dark the whole time. Date:

--- a/css/styleMain.css
+++ b/css/styleMain.css
@@ -20,6 +20,10 @@ html {
         --border-color: #ffffff;
     }
 
+    .input {
+        color: white;
+    }
+
 
 
 }
